fix hour animation lag on mobile

--- a/src/screens/Weather/components/Day.module.scss
+++ b/src/screens/Weather/components/Day.module.scss
@@ -6,7 +6,7 @@
     min-width: 88px;
     max-width: 88px;
     border-radius: 8px;
-    border: 2px solid rgba($color-text-primary, 0.6);
+    border: 3px solid $color-text-primary;
     color: $color-text-primary;
     display: flex;
     flex-direction: column;
